Fixed some layout issues

--- a/web/css/main/admin/admin_main.less
+++ b/web/css/main/admin/admin_main.less
@@ -150,14 +150,15 @@
         color:           @bt-dkred;
         font-weight:     normal;
         text-decoration: underline;
+        cursor:          pointer;
     }
 
     .form-screenshot-preview {
         padding-top: 1rem;
-        clear: both;
+        clear:       both;
         img {
             box-shadow: 0 0 5px #CCC;
-            width: 256px;
+            width:      256px;
         }
     }
 
